--- a/01-2columnas_iguales_css_grid/index.html
+++ b/01-2columnas_iguales_css_grid/index.html
@@ -24,6 +24,7 @@
             <img src="img/imagen2.jpg">
             <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus.</p>
             <a href="#">Leer más</a>
+            <p>Alex estuvo aqui.</p>
         </article>
     </div>
 
